# elasticq

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmark_plot.txt
.claude/: settings.local.json
benches/: buffer_benchmarks.rs  lock_free_benchmarks.rs
examples/: lock_free_demo.rs  performance_summary.rs  producer_scalability_test.rs  quick_scalability.rs  scalability_test.rs
src/: config.rs  error.rs  lib.rs  lock_free.rs
tests/: comprehensive_tests.rs  concurrency_tests.rs  property_based_tests.rs
tla+/: LockFreeMPSCQueue.cfg  LockFreeMPSCQueue.tla  README.md  manual_verification.md
