[package]
name = "elasticq"
version = "0.1.0"
edition = "2021"
authors = ["John Fabienke"]
description = "A thread-safe, dynamically resizable circular buffer for high-throughput scenarios"
license = "MIT"
repository = "https://github.com/jfabienke/elasticq"
keywords = ["queue", "buffer", "circular-buffer", "dynamic", "concurrent"]
categories = ["data-structures", "concurrency", "asynchronous"]
readme = "README.md"
documentation = "https://docs.rs/elasticq"
homepage = "https://github.com/jfabienke/elasticq"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
default = []
async = ["tokio"]
lock_free = ["portable-atomic"]

[dependencies]
parking_lot = "0.12"
thiserror = "1.0"
portable-atomic = { version = "1.6", optional = true }
crossbeam-epoch = "0.9"

[dependencies.tokio]
version = "1.21"
optional = true
features = ["sync", "time"]

[dev-dependencies]
criterion = "0.3"
proptest = "1.4"
tokio-test = "0.4"
loom = "0.7"

[[bench]]
name = "buffer_benchmarks"
harness = false

[[bench]]
name = "lock_free_benchmarks"
harness = false
required-features = ["lock_free"]
